[package]
name = "spotify_shuffler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3.30"
futures-core = "0.3.30"
futures-util = "0.3.30"
maybe-async = "0.2.10"
rspotify = { version = "0.13.2", default-features = false, features = ["client-reqwest", "reqwest-native-tls"] }
tokio = {version = "1.38.0", features = ["full"]}
